<resources>
    <string name="app_name">employee</string>
    <string name="title">Employee</string>
    <string name="firstname">first name </string>
    <string name="lastname">last name </string>
    <string name="number">number</string>
    <string name="email">email</string>
    <string name="envoyer">envoyer</string>
    <string name="add">add</string>
    <string name="continuer">continuer</string>
    <string name="call">call</string>
    <string name="message">message</string>
    <string name="items">items</string>
    <string name="choose">Choose Search Option : </string>
    <string name="search">Search ...</string>
    <string name="ok">ok</string>
    <string name="ide">id </string>

    <string name="welcome">Welcome to employee app</string>




</resources>