<?xml version="1.0" encoding="utf-8"?>
<!-- menu_layout.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp">

    <RadioGroup
        android:id="@+id/filtre_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/choose_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname" />
        <RadioButton
            android:id="@+id/choose_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname" />

        <RadioButton
            android:id="@+id/choose_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number" />
        <RadioButton
            android:id="@+id/choose_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />
        <RadioButton
            android:id="@+id/choose_ide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ide" />

        <!-- Add more radio buttons as needed -->

    </RadioGroup>
</LinearLayout>
