<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEdit"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#4CAF50"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:paddingLeft="20dp">

        <ImageButton
            android:id="@+id/back"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"></ImageButton>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title"
            android:gravity="start|center_vertical"
            android:textSize="24sp"
            android:layout_marginStart="30dp"
            android:textStyle="bold|italic"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/add_image"
            android:src="@drawable/ic_add_photo"></de.hdodenhof.circleimageview.CircleImageView>

        <EditText
            android:id="@+id/add_firstname"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:background="@drawable/circle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/firstname"></EditText>
        <EditText
            android:id="@+id/add_lastname"

            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:background="@drawable/circle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/lastname"></EditText>
        <EditText
            android:id="@+id/add_number"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:background="@drawable/circle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/number"
            android:inputType="number"></EditText>
        <EditText
            android:id="@+id/add_email"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:background="@drawable/circle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/email"></EditText>

        <Button
            android:id="@+id/envoyer"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/envoyer"
            android:textAllCaps="false"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/btn"></Button>
    </LinearLayout>
</RelativeLayout>