<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/employee_item"
    android:orientation="vertical"
    android:paddingBottom="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:weightSum="100">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_weight="20"
            android:id="@+id/pdp"
            android:src="@drawable/profile"></de.hdodenhof.circleimageview.CircleImageView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="14"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="100">

            <TextView
                android:layout_width="match_parent"
                android:paddingStart="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="end"
                android:text="@string/ide"
                android:textColor="#3F51B5"
                android:textSize="17sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="bottom"
                android:text="@string/firstname"
                android:textColor="#3F51B5"
                android:textSize="17sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="top"
                android:text="@string/lastname"
                android:textColor="#3F51B5"
                android:textSize="17sp"
                android:textStyle="bold"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical"
            android:weightSum="100">

            <TextView
                android:id="@+id/idemployee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="bottom"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/nom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="bottom"
                android:text="Halouane"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/prenom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="top"
                android:text="Imad Eddine"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"></TextView>
        </LinearLayout>

        <ImageButton
            android:id="@+id/edit"
            android:layout_width="17dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="15"
            android:background="#00FFFFFF"
            android:src="@drawable/ic_edit"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck"></ImageButton>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:paddingStart="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_email"></ImageView>

        <TextView
            android:textColor="#656363"
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="halouaneimad@gmail.com"
            android:textSize="17sp"
            android:textStyle="bold"></TextView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:paddingStart="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_message"></ImageView>

        <TextView
            android:textColor="#656363"

            android:id="@+id/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="0555927602"
            android:textSize="17sp"
            android:textStyle="bold"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:paddingStart="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_call"></ImageView>

        <TextView
            android:textColor="#656363"
            android:id="@+id/messagee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart= "10dp"
            android:text="0555927602"
            android:textSize="17sp"
            android:textStyle="bold"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:paddingHorizontal="10dp">

        <LinearLayout
            android:id="@+id/btn_call"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:paddingHorizontal="10dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="left"
                android:src="@drawable/ic_call"></ImageView>

            <TextView
                android:textColor="#504E4E"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/call"
                android:textSize="15sp"
                android:textStyle="bold"></TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_message"

            android:layout_marginStart="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:paddingHorizontal="10dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="left"
                android:src="@drawable/ic_message"></ImageView>

            <TextView
                android:textColor="#504E4E"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/message"
                android:textSize="15sp"
                android:textStyle="bold"></TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_email"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:paddingHorizontal="10dp"
            android:layout_marginStart="7dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="left"
                android:src="@drawable/ic_email"></ImageView>

            <TextView
                android:textColor="#504E4E"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/email"
                android:textSize="15sp"
                android:textStyle="bold"></TextView>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>